# autoversion

./: .gitignore  Makefile  README.rst  autoversion  autoversion-prog  autoversion.leo  pyproject.toml  setup.py  wrapper.py
autoversion_lib/: __init__.py
debian/: control  copyright  rules
docs/: RelNotes-0.8.0.txt  RelNotes-0.8.1.txt  RelNotes-0.8.2.txt  RelNotes-0.9.0.txt  RelNotes-0.9.1.txt  RelNotes-0.9.2.txt
pylib/: autoversion.py  cmd_autoversion.py
