[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "autoversion"
version = "1.1.0"
authors = [{name = "TurnKey GNU/Linux", email = "jeremy@turnkeylinux.org"}]
license = {text = "GPLv3+"}
description = "Map git commits to auto-versions and vice versa"

[project.urls]
Homepage = "https://github.com/turnkeylinux/autoversion"

[tool.setuptools]
packages = ["autoversion_lib"]
script-files = ["autoversion"]
include-package-data = false

[tool.setuptools.package-data]
autoversion_lib = ["py.typed"]
